<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray"
            android:gravity="end"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="32pt" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonAC"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/AC"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/buttonPosNeg"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/plusMinus"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/buttonPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/percent"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/divide"
                    android:textColor="@color/white"
                    android:textSize="12pt" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/seven"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/eight"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/nine"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/buttonTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/multiply"
                    android:textColor="@color/white"
                    android:textSize="12pt" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/four"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/five"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/six"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    android:textSize="12pt" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/one"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/two"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/three"
                    android:textColor="@color/black"
                    android:textSize="12pt" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="12pt" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                android:layout_width="176dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="12pt" />

            <Button
                android:id="@+id/buttonPeriod"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="@color/white"
                android:text="@string/period"
                android:textColor="@color/black"
                android:textSize="12pt" />

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="@color/orange"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="12pt" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
